process gap testing done